Per user follow/unfollow.

--- a/api-server-spring/src/main/webapp/WEB-INF/views/base.mustache
+++ b/api-server-spring/src/main/webapp/WEB-INF/views/base.mustache
@@ -12,10 +12,10 @@
     <script defer src="/static/js/common.js"></script>
     <script defer src="/static/js/{{loader}}.js"></script>
     <noscript>
-        <meta http-equiv="Refresh" content="1;url=XXX" />
+        <meta http-equiv="Refresh" content="1;url=/nojs" />
     </noscript>
 </head>
 <body>
-Preparing for awesomeness...
+<div id="preloader">Loading Jack Sparrow...</div>
 </body>
 </html>
