--- a/api-server-spring/src/main/webapp/static/template/postDetails.mustache
+++ b/api-server-spring/src/main/webapp/static/template/postDetails.mustache
@@ -8,17 +8,17 @@
   <div class="info">
     (<span class="timestamp" />Online Now?!)
   </div>
-  <a href="{{permalink}}" id="zoom-trigger" class="trigger trigger-icon" title="Zoom" />
 
-  {{#user}}
-    {{#doesNotFollow}}
-      <a href="#" id="follow-trigger" class="trigger trigger-icon" title="Follow" 
-        data-id="{{id}}" />
-    {{/doesNotFollow}}
-    {{#doesFollow}}
-      <a href="#" id="unfollow-trigger" class="trigger trigger-icon" title="Unfollow"
-        data-id="{{id}}" />
-    {{/doesFollow}}
-  {{/user}}
+  <div>
+    <a href="{{permalink}}" id="zoom-trigger" class="trigger trigger-icon" title="Zoom" />
+    {{#user}}
+      {{#doesNotFollow}}
+        <a href="#" class="trigger-icon follow-trigger" title="Follow" data-id="{{id}}" />
+      {{/doesNotFollow}}
+      {{#doesFollow}}
+        <a href="#" class="trigger-icon unfollow-trigger" title="Unfollow" data-id="{{id}}" />
+      {{/doesFollow}}
+    {{/user}}
+  </div>
 
 </div>
