add jetty config files for multiple instances.
add method for resizing of image to particular dimension.

--- a/api-server-spring/src/main/webapp/WEB-INF/views/image.mustache
+++ b/api-server-spring/src/main/webapp/WEB-INF/views/image.mustache
@@ -24,7 +24,7 @@
 				id="uploadedFile" size="40">
 		</p>
            user <input type="text" id="user" name="user"/>
-           <div id="parentTarget" style = "border:1px solid black;width:400px;height:400px;overflow:hidden">
+           <div id="parentTarget" style = "border:1px solid black;width:400px;height:400px;position:relative;overflow:hidden">
                 <img src=""  id="target" alt="Flowers" />
            </div>
            <div style="border:1px solid black;width:100px;height:100px;overflow:hidden;">
