--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic);
+
 /*
  * Overall Structure
  *
@@ -8,10 +10,18 @@ html {
 }
 
 body {
-    font-size: 120%;
+    font-family: 'Open Sans Condensed', 'Helvetica', sans-serif;
+    font-size: 24px;
+    font-weight: 300;
+    background-color: rgb(230, 214, 189);
+    color: rgb(83, 83, 83);
     margin: 0;
     padding: 0;
     border: 0;
+}
+
+a {
+    color: rgb(102, 136, 116);
 }
 
 textarea,input,select {
@@ -31,52 +41,67 @@ fieldset {
 }
 
 #dashboard {
-    background-color: rgba(0, 0, 0, 0.8);
+    vertical-align: middle;
+    background-color: rgba(83, 83, 83, 1.0);
+    color: rgb(230, 214, 189);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 2em; /* affects create */
-    color: white;
     z-index: 1;
     min-height: 32px; /* XXX vert align pic */
-    /*border-bottom: 1px solid white;*/
+}
+
+#dashboard a {
+    color: rgb(230, 214, 189);
+    text-decoration: none;
+}
+
+#dashboard .trigger-icon,
+#dashboard img {
+    vertical-align: middle;
 }
 
 #root-pane {
     position: fixed;
     top: 2em;
     left: 0;
-    width: 25%;
+    width: 20%;
     min-width: 128px;
-    background-color: red;
+    padding-left: 1ex;
+}
+
+#root-pane img {
+    padding-bottom: 3ex;
 }
 
 #full-content-pane {
     padding-top: 2em;
-    background-color: green;
 }
 
 #content-pane {
     padding-top: 2em;
     float: right;
-    width: 75%;
-    background-color: green;
+    width: 80%;
 }
 
 #content {
     float: left;
-    width: 55%;
+    width: 60%;
     min-height: 200px;
     word-wrap: break-word;
-    background-color: grey;
 }
 
 #detail {
+    background-color: rgba(120, 163, 192, 0.3);
     float: right;
-    width: 45%;
+    width: 40%;
     word-wrap: break-word;
-    background-color: purple;
+}
+
+#detail div {
+    margin: 2ex;
 }
 
 
@@ -87,10 +112,15 @@ fieldset {
 
 #dashboard .branding {
     float: left;
+    font-weight: 400;
+    padding-left: 1ex;
 }
 
 #dashboard .controls {
     float: right;
+}
+#dashboard .controls a {
+    font-size: 80%;
 }
 
 /*
@@ -102,7 +132,6 @@ fieldset {
     margin: auto;
     margin-top: 20ex;
     padding: 2ex;
-    background-color: grey;
 }
 
 .unknownUser {
@@ -111,7 +140,7 @@ fieldset {
 }
 
 .current {
-    background-color: yellow;
+    background-color: rgba(120, 163, 192, 0.3);
 }
 
 .username {
@@ -163,7 +192,6 @@ a > .username {
     position: absolute;
     bottom: 0;
     right: 0;
-    background-color: blue;
     cursor: pointer;
 }
 
@@ -197,7 +225,8 @@ a > .username {
 
 .dropdown {
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(83, 83, 83, 0.95);
+    color: rgb(230, 214, 189);
     z-index: 1;
     left: 0;
     top: 2em;
@@ -207,13 +236,11 @@ a > .username {
 
 .dropdown .content {
     float: right;
-    background-color: rgba(0, 0, 0, 0.8);
     width: 36ex; 
     height: 100%;
     padding: 3ex;
     padding-top: 0;
     margin: auto;
-    color: white;
 }
 
 .dropdown .info {
@@ -334,6 +361,7 @@ input[type="text"],input[type="password"] {
 
 .entity {
     position: relative;
+    padding: 1ex;
 }
 
 .entity .content {
@@ -341,7 +369,6 @@ input[type="text"],input[type="password"] {
 
 .entity .timestamp {
     float: right;
-    background: blue;
     font-style: italic;
     font-size: 80%;
 }
