--- a/static/template/postDetails.mustache
+++ b/static/template/postDetails.mustache
@@ -2,11 +2,11 @@
   <div>
   Created on {{created_on_readable}} by {{#user}}{{name}}{{/user}}
   </div>
-  <a href="{{#user}}{{permalink}}{{/user}}">Go to 
+
+  <div>
+    <a href="{{#user}}{{permalink}}{{/user}}">Go to 
     the full profile of
     <span class="username">@{{#user}}{{username}}{{/user}}</span></a>
-  <div class="info">
-    (<span class="timestamp" />Online Now?!)
   </div>
 
   <div>
