--- a/static/template/unknownUser.mustache
+++ b/static/template/unknownUser.mustache
@@ -1,9 +1,8 @@
-<div id="welcome-banner">
-    <big>Jack Sparrow</big>
-    <br />
-    <em>cause twitter is not hip enough</em>
-    <br />
-    <br />
-</div>
+<div id="authme">
+  <div id="welcome-banner">
+      <b>Jack Sparrow</b>
+      <em>cause twitter is not hip enough</em>
+  </div>
 
-<div id="authenticate" />
+  <div id="authenticate" />
+</div>
