--- a/static/views/base.mustache
+++ b/static/views/base.mustache
@@ -6,7 +6,8 @@
 
     <link rel="stylesheet" href="/static/css/common.css" />
 
-    <script defer src="/static/js/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+
     <script defer src="/static/js/lib/jquery-1.7.2.js"></script>
     <script defer src="/static/js/lib/mustache.js"></script>
     <script defer src="/static/js/fetch.js"></script>
